p2/scripts/app2.yaml
########################################
#               Service                #
########################################

apiVersion: v1
kind: Service
metadata:
  name: app2-service
spec:
  type: ClusterIP
  selector:
    app: iot-app2
  ports:
    - name: http
      port: 80
      targetPort: 8080

########################################
#              Deployement             #
########################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels:
    app: iot-app2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: iot-app2
  template:
    metadata:
      labels:
        app: iot-app2
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
          - containerPort: 8080
