p2/scripts/app3.yaml
########################################
#               Service                #
########################################

kind: Service
apiVersion: v1
metadata:
  name: app3-service
spec:
  type: ClusterIP
  selector:
    app: iot-app3
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
########################################
#              Deployement             #
########################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3
  labels:
    app: iot-app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-app3
  template:
    metadata:
      labels:
        app: iot-app3
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.10
        ports:
        - containerPort: 8080
